<resources>
    <string name="app_name">Recommend</string>

    <string name="q1">Q1\n어느 지역으로 떠나시나요?</string>
    <string name="q1_search_hint">여행 지역을 검색해주세요.</string>

    <string name="q2">Q2\n누구와 함께 떠나시나요?</string>
    <string name="q2_btn_alone">개인</string>
    <string name="q2_btn_family">가족</string>
    <string name="q2_btn_friend">친구</string>
    <string name="q2_btn_couple">연인</string>
    <string name="q2_btn_group">단체</string>

    <string name="q3">Q3\n어떤 일정으로 떠나시나요?</string>
    <string name="q3_start">여행 시작일</string>
    <string name="q3_end">여행 종료일</string>
    <string name="q3_btn_choice">선택</string>
    <string name="q3_start_date_ex">22.11.23</string>
    <string name="q3_end_date_ex">22.11.30</string>

    <string name="q4">Q4\n어떤 여행을 선호하시나요?</string>
    <string name="q4_btn_refresh">휴식/힐링</string>
    <string name="q4_btn_restaurant">맛집</string>
    <string name="q4_btn_cafe">카페</string>
    <string name="q4_btn_culture">문화 탐방</string>
    <string name="q4_btn_hotplace">핫플레이스</string>
    <string name="q4_btn_activity">액티비티</string>

    <string name="recommend_result_1">초월이 추천하는</string>
    <string name="recommend_result_user">이름</string>
    <string name="recommend_result_2"> 님을 위한 코스</string>
    <string name="recommend_result_title">속이 뻥 뚫리는 바다와 함께</string>
    <string name="recommend_result_c1">강화도립화목원</string>
    <string name="recommend_result_c2">비포선셋</string>
    <string name="recommend_result_c3">소양강스카이워크</string>
    <string name="recommend_result_c4">산토리니</string>
    <string name="recommend_result_num_1">1</string>
    <string name="recommend_result_num_2">2</string>
    <string name="recommend_result_num_3">3</string>
    <string name="recommend_result_num_4">4</string>

    <string name="chowall_slogan">장벽을 넘어\n여행의 한계를 초월하다</string>
    <string name="restrictions_question">님이 여행 시 겪는 제약을 선택해주세요.</string>
    <string name="restrictions_answer1">전동 휠체어 사용자 및 동행자</string>
    <string name="restrictions_answer2">수동 휠체어 사용자 및 동행자</string>
    <string name="restrictions_answer3">거동이 불편한 노인/임산부 및 동행자</string>
    <string name="restrictions_answer4">유아차 사용자 및 동행자</string>
    <string name="restrictions_answer5">제약 없음</string>
    <string name="restrictions_btn_signup">회원가입</string>


</resources>