<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_re_result_item"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/white_round_box"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12.8125"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="16.16666666666667"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8.571428571428571"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/img_re_result_item"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/img_recommend_result"
                    android:cropToPadding="false"
                    android:outlineProvider="none"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.428571428571429"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.333333333333333"
                    android:background="@drawable/img_recommend_result_good" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>

                <TextView
                    android:id="@+id/tv_title_re_result_item"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="22.33333333333333"
                    android:fontFamily="@font/opensans_bold"
                    android:gravity="center_vertical"
                    android:text="@string/recommend_result_title"
                    android:textColor="@color/main"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeMinTextSize="8sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.6875"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9.479166666666667"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.95"
                    android:background="@drawable/img_recommend_result_1" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>

                <TextView
                    android:id="@+id/tv_c1_re_result_item"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7.4"
                    android:fontFamily="@font/opensans_bold"
                    android:gravity="center_vertical"
                    android:text="@string/recommend_result_c1"
                    android:textColor="@color/hintColor"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="14sp"
                    app:autoSizeMinTextSize="7sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.256410256410256"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.95"
                    android:background="@drawable/img_recommend_result_2" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>

                <TextView
                    android:id="@+id/tv_c2_re_result_item"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7.4"
                    android:fontFamily="@font/opensans_bold"
                    android:gravity="center_vertical"
                    android:text="@string/recommend_result_c2"
                    android:textColor="@color/hintColor"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="14sp"
                    app:autoSizeMinTextSize="7sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.256410256410256"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.95"
                    android:adjustViewBounds="true"
                    android:background="@drawable/img_recommend_result_3"
                    android:scaleType="fitCenter" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>

                <TextView
                    android:id="@+id/tv_c3_re_result_item"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7.4"
                    android:fontFamily="@font/opensans_bold"
                    android:gravity="center_vertical"
                    android:text="@string/recommend_result_c3"
                    android:textColor="@color/hintColor"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="14sp"
                    app:autoSizeMinTextSize="7sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.256410256410256"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.95"
                    android:background="@drawable/img_recommend_result_4" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>

                <TextView
                    android:id="@+id/tv_c4_re_result_item"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7.4"
                    android:fontFamily="@font/opensans_bold"
                    android:gravity="center_vertical"
                    android:text="@string/recommend_result_c4"
                    android:textColor="@color/hintColor"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="14sp"
                    app:autoSizeMinTextSize="7sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"></LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.1875"
        android:orientation="vertical"></LinearLayout>
</LinearLayout>