<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recommend_Q4">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.062196307" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8969874" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline68"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.020408163"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline69"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.048590865"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/opensans_bold"
            android:text="초월 코스 추천"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="22dp" />

    </androidx.appcompat.widget.Toolbar>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/bottom_nav"
        android:paddingLeft="23dp"
        android:paddingRight="23dp"
        app:itemHorizontalTranslationEnabled="false"
        app:itemIconSize="55dp"
        app:itemPaddingBottom="24dp"
        app:itemPaddingTop="12dp"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/toolbar_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline53"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_menu" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline53"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.25"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"></LinearLayout>

            <TextView
                android:id="@+id/tv_q4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10.2"
                android:bufferType="spannable"
                android:fontFamily="@font/opensans_bold"
                android:gravity="top"
                android:text="@string/q4"
                android:textColor="@color/hintColor"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="30sp"
                app:autoSizeMinTextSize="15sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6.8"
                android:orientation="horizontal"></LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="28.625"
            android:background="#3390D4D4"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.45"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.666666666666667"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>

                <ToggleButton
                    android:id="@+id/btn_refresh_q4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="16"
                    android:background="@drawable/toggle_selector"
                    android:fontFamily="@font/opensans_bold"
                    android:stateListAnimator="@null"
                    android:textColor="@drawable/toggle_text_color"
                    android:textOff="@string/q4_btn_refresh"
                    android:textOn="@string/q4_btn_refresh"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="16sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.666666666666667"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>

                <ToggleButton
                    android:id="@+id/btn_restaurant_q4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="16"
                    android:background="@drawable/toggle_selector"
                    android:fontFamily="@font/opensans_bold"
                    android:stateListAnimator="@null"
                    android:textColor="@drawable/toggle_text_color"
                    android:textOff="@string/q4_btn_restaurant"
                    android:textOn="@string/q4_btn_restaurant"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="16sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.666666666666667"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>

                <ToggleButton
                    android:id="@+id/btn_cafe_q4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="16"
                    android:background="@drawable/toggle_selector"
                    android:fontFamily="@font/opensans_bold"
                    android:stateListAnimator="@null"
                    android:textColor="@drawable/toggle_text_color"
                    android:textOff="@string/q4_btn_cafe"
                    android:textOn="@string/q4_btn_cafe"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="16sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.666666666666667"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>

                <ToggleButton
                    android:id="@+id/btn_culture_q4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="16"
                    android:background="@drawable/toggle_selector"
                    android:fontFamily="@font/opensans_bold"
                    android:stateListAnimator="@null"
                    android:textColor="@drawable/toggle_text_color"
                    android:textOff="@string/q4_btn_culture"
                    android:textOn="@string/q4_btn_culture"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="16sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.666666666666667"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>

                <ToggleButton
                    android:id="@+id/btn_hotplace_q4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="16"
                    android:background="@drawable/toggle_selector"
                    android:fontFamily="@font/opensans_bold"
                    android:stateListAnimator="@null"
                    android:textColor="@drawable/toggle_text_color"
                    android:textOff="@string/q4_btn_hotplace"
                    android:textOn="@string/q4_btn_hotplace"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="16sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.666666666666667"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>

                <ToggleButton
                    android:id="@+id/btn_activity_q4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="16"
                    android:background="@drawable/toggle_selector"
                    android:fontFamily="@font/opensans_bold"
                    android:stateListAnimator="@null"
                    android:textColor="@drawable/toggle_text_color"
                    android:textOff="@string/q4_btn_activity"
                    android:textOn="@string/q4_btn_activity"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="16sp"
                    app:autoSizeMinTextSize="10sp"
                    app:autoSizeStepGranularity="1sp"
                    app:autoSizeTextType="uniform" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"></LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.45"
                android:orientation="vertical"></LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.875"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.6"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.868421052631579"
                    android:orientation="horizontal"></LinearLayout>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/img_indicator_4" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.868421052631579"
                    android:orientation="horizontal"></LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.2"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>